--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
-    <string name="app_name">Security CamHouse</string>
+    <string name="app_name">CamHouse</string>
     <string name="title_wellcome">Well Come Insecurity Cam</string>
     <string name="title_descr_splash">Lorem Ipsum is simply dummy  text of the printing and typesetting industry.</string>
     <string name="button_facebook">Facebok</string>
     <string name="button_google">Google</string>
     <string name="about">Sobre</string>
     <string name="Sair">Sair</string>
+    <string name="refresh">Atualizar</string>
 </resources>
