--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="refresh">Atualizar</string>
     <string name="loader">Carregando...</string>
     <string name="update_image">Atualizando images...</string>
+    <string name="default_web_client_id">214656868796-nhmk93bg315i45k5b26u10nrvb84rolg.apps.googleusercontent.com</string>
 </resources>
