--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="update_image">Atualizando images...</string>
     <string name="default_web_client_id">214656868796-nhmk93bg315i45k5b26u10nrvb84rolg.apps.googleusercontent.com</string>
     <string name="class_user">User</string>
+    <string name="action_get_user">action_get_user</string>
+    <string name="select_user">select_user</string>
+    <string name="extra_success">extra_success</string>
 </resources>
